--- a/404.html
+++ b/404.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
-    <link rel="stylesheet" href="styles.css">
-    <title>Sohdah | 404 Error</title>
+    <link href="favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link type="image/png" href="favicon/favicon-32x32.png" rel="icon" sizes="32x32">
+    <link type="image/png" href="favicon/favicon-16x16.png" rel="icon" sizes="16x16">
+    <link href="favicon/site.webmanifest" rel="manifest">
+    <link href="styles.css" rel="stylesheet">
+    <title>sohdah.dev | 404 Error</title>
 </head>
+
 <body>
-    <h1> 404 Error <a href="https://www.sohdah.dev"> Return Home</a></h1>
+    <div class="topbar">
+        <ul class="navbar">
+            <li><a href="index.html">Homepage</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
+        <div class="titlebar">
+            <span class="title">sohdah.dev</span>
+            <span class="subtitle">Homepage</span>
+        </div>
+    </div>
+    <hr>
+    <div class="error-content">
+        <h1>404 ERROR: Requested URL doesn't exist :/</h1>
+    </div>
 </body>
+
 </html>
