--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,7 @@
     <link type="image/png" href="/favicon/favicon-16x16.png" rel="icon" sizes="16x16">
     <link href="/favicon/site.webmanifest" rel="manifest">
     <link href="/styles.css" rel="stylesheet">
-    <title>sohdah.dev | 404 Error</title>
+    <title>sohdah.dev | Social</title>
 </head>
 
 <body>
@@ -21,13 +21,10 @@
         </ul>
         <div class="titlebar">
             <span class="title">sohdah.dev</span>
-            <span class="subtitle">Homepage</span>
+            <span class="subtitle">Social</span>
         </div>
     </div>
     <hr>
-    <div class="error-content">
-        <h1>404 ERROR: Requested URL doesn't exist :/</h1>
-    </div>
 </body>
 
 </html>
