--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
-    <link type="image/png" href="favicon/favicon-32x32.png" rel="icon" sizes="32x32">
-    <link type="image/png" href="favicon/favicon-16x16.png" rel="icon" sizes="16x16">
-    <link href="favicon/site.webmanifest" rel="manifest">
-    <link href="styles.css" rel="stylesheet">
+    <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link type="image/png" href="/favicon/favicon-32x32.png" rel="icon" sizes="32x32">
+    <link type="image/png" href="/favicon/favicon-16x16.png" rel="icon" sizes="16x16">
+    <link href="/favicon/site.webmanifest" rel="manifest">
+    <link href="/styles.css" rel="stylesheet">
     <title>sohdah.dev | Homepage</title>
 </head>
 
 <body>
     <div class="topbar">
         <ul class="navbar">
-            <li><a href="index.html">Homepage</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="/index.html">Homepage</a></li>
+            <li><a href="/projects/index.html">Projects</a></li>
+            <li><a href="/contact/index.html">Social</a></li>
         </ul>
         <div class="titlebar">
             <span class="title">sohdah.dev</span>
