--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <script src="/random.js"></script>
     <div class="topbar">
         <ul class="navbar">
             <li><a href="/index.html">Homepage</a></li>
