--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
         </ul>
         <div class="titlebar">
             <span class="title">sohdah.dev</span>
-            <span class="subtitle">Homepage</span>
+            <span class="subtitle">404 ERROR</span>
         </div>
     </div>
     <hr>
