Added temparary content :shock:

--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
         </div>
     </div>
     <hr>
+    <div class="contentwrapper">
+        <div class="lsidecontent">
+            <span class="contenttitle">Featured social posts</span>
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugiat ad ex. Vitae sequi, vel sunt sit perferendis labore eveniet animi ducimus! Commodi consequuntur velit quos atque consequatur itaque qui? </div>
+        </div>
+        <div class="maincontent">
+            <span class="contenttitle">Featured projects</span>
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugiat ad ex. Vitae sequi, vel sunt sit perferendis labore eveniet animi ducimus! Commodi consequuntur velit quos atque consequatur itaque qui? </div>
+        </div>
+        <div class="rsidecontent">
+            <span class="contenttitle">About Me!</span>
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugiat ad ex. Vitae sequi, vel sunt sit perferendis labore eveniet animi ducimus! Commodi consequuntur velit quos atque consequatur itaque qui? </div>
+        </div>
+    </div>
 </body>
 
 </html>
