Finished up the Temparary content!

--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,7 @@
     <link type="image/png" href="/favicon/favicon-16x16.png" rel="icon" sizes="16x16">
     <link href="/favicon/site.webmanifest" rel="manifest">
     <link href="/styles.css" rel="stylesheet">
-    <title>sohdah.dev | Social</title>
+    <title>sohdah.dev | Homepage</title>
 </head>
 
 <body>
@@ -25,6 +25,20 @@
         </div>
     </div>
     <hr>
+    <div class="contentwrapper">
+        <div class="lsidecontent">
+            <span class="contenttitle">Social Links</span>
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugiat ad ex. Vitae sequi, vel sunt sit perferendis labore eveniet animi ducimus! Commodi consequuntur velit quos atque consequatur itaque qui? </div>
+        </div>
+        <div class="maincontent">
+            <span class="contenttitle">Blog</span>
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugiat ad ex. Vitae sequi, vel sunt sit perferendis labore eveniet animi ducimus! Commodi consequuntur velit quos atque consequatur itaque qui? </div>
+        </div>
+        <div class="rsidecontent">
+            <span class="contenttitle">Featured Posts</span>
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugiat ad ex. Vitae sequi, vel sunt sit perferendis labore eveniet animi ducimus! Commodi consequuntur velit quos atque consequatur itaque qui? </div>
+        </div>
+    </div>
 </body>
 
 </html>
