--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <hr>
     <div class="contentwrapper">
         <div class="lsidecontent">
-            <span class="contenttitle">Featured social posts</span>
+            <span class="contenttitle">Featured Blogs</span>
             <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugiat ad ex. Vitae sequi, vel sunt sit perferendis labore eveniet animi ducimus! Commodi consequuntur velit quos atque consequatur itaque qui? </div>
         </div>
         <div class="maincontent">
@@ -38,6 +38,9 @@
             <span class="contenttitle">About Me!</span>
             <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugiat ad ex. Vitae sequi, vel sunt sit perferendis labore eveniet animi ducimus! Commodi consequuntur velit quos atque consequatur itaque qui? </div>
         </div>
+    </div>
+    <div class="bottom">
+        © 2024 Sohdah. All rights reserved.
     </div>
 </body>
 
