--- a/projects/index.html
+++ b/projects/index.html
@@ -25,6 +25,16 @@
         </div>
     </div>
     <hr>
+    <div class="contentwrapper">
+        <div class="sidecontent">
+            <span class="contenttitle">Projects</span>
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugiat ad ex. Vitae sequi, vel sunt sit perferendis labore eveniet animi ducimus! Commodi consequuntur velit quos atque consequatur itaque qui? </div>
+        </div>
+        <div class="maincontent2">
+            <span class="contenttitle">Featured</span>
+            <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugiat ad ex. Vitae sequi, vel sunt sit perferendis labore eveniet animi ducimus! Commodi consequuntur velit quos atque consequatur itaque qui? </div>
+        </div>
+    </div>
 </body>
 
 </html>
