forgot the navbar on all the pages lol

--- a/404.html
+++ b/404.html
@@ -28,6 +28,9 @@
     <div class="error-content">
         <h1>404 ERROR: Requested URL doesn't exist :/</h1>
     </div>
+    <div class="bottom">
+        © 2024 Sohdah. All rights reserved.
+    </div>
 </body>
 
 </html>
