--- a/contact/index.html
+++ b/contact/index.html
@@ -39,6 +39,9 @@
             <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugiat ad ex. Vitae sequi, vel sunt sit perferendis labore eveniet animi ducimus! Commodi consequuntur velit quos atque consequatur itaque qui? </div>
         </div>
     </div>
+    <div class="bottom">
+        © 2024 Sohdah. All rights reserved.
+    </div>
 </body>
 
 </html>
